Fix z-index for header (bug 871895)

--- a/hearth/media/css/header.styl
+++ b/hearth/media/css/header.styl
@@ -48,7 +48,7 @@
     position: fixed;
     text-align: center;
     top: 0;
-    z-index: 10;
+    z-index: 20;
     > * {
         display: block;
     }
